--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,5 +21,4 @@ phases:
       - printf '[{"name":"'$CONTAINER_NAME'","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinition.json
 
 artifacts:
-  files:
-    - imagedefinition.json
+  files: imagedefinition.json
