--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,17 +8,23 @@ phases:
       - REPOSITORY_URI="docker.io/aishwaryavaithiyanathan/backend"
       - CONTAINER_NAME="backend-container"
       - IMAGE_TAG="latest"
+
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
+
   post_build:
     commands:
       - echo Build completed on `date`
+      - echo Pushing the image to DockerHub...
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"'$CONTAINER_NAME'","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinition.json
+      - echo "[{\"name\":\"$CONTAINER_NAME\",\"imageUri\":\"$REPOSITORY_URI:$IMAGE_TAG\"}]" > imagedefinition.json
+      - cat imagedefinition.json
+      - ls -l imagedefinition.json
 
 artifacts:
-  files: imagedefinition.json
+  files:
+    - imagedefinition.json
